src/test/ui/issues/issue-24883.stderr
error: compilation successful
  --> $DIR/issue-24883.rs:25:1
   |
LL | / fn main() {  //~ ERROR compilation successful
LL | |     let _ = a::c::Bar(a::b::Foo);
LL | |     let _ = a::Bar(a::b::Foo);
LL | | }
   | |_^

error: aborting due to previous error

